# duckdb-hdfs

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: MainDistributionPipeline.yml
src/: hdfs_extension.cpp  hdfsfs.cpp
src/include/: hdfs_extension.hpp  hdfsfs.hpp
test/: CMakeLists.txt
test/cpp/: test_hdfsfs.cpp
test/nodejs/: hdfs_test.js
test/python/: hdfs_test.py
test/sql/: hdfs.test
